# m88

./: .gitignore  CMakeLists.txt  M88_2008.sln  M88_2008.vcproj  M88_2008.vcxproj  M88_2008.vcxproj.filters  PORTING_LINUX.md  README.md  README_LINUX.md  README_WINDOWS.md  ROLLBACK.md
cdif/: cdif_2008.vcxproj
cmake/: M88Install.cmake
data/: LICENSE.BSD  m88-qt.desktop.in  m88-qt.metainfo.xml.in
data/man/: m88-qt.1.in
diskdrv/: diskdrv_2008.vcxproj  diskdrv_2008.vcxproj.filters
src/common/: device_i.h  lpf.cpp  schedule.cpp  schedule.h  srcbuf.cpp  srcbuf.h
src/devices/: Z80Test.cpp  Z80Test.h  Z80c.cpp  Z80c.h  opna.cpp
src/if/: ifcommon.h
src/linux/: display_scale.h  half_kana_ime.cpp  half_kana_ime.h  keyboard_vk.cpp  keyboard_vk.h  keyboard_vk_sdl.cpp  keyboard_vk_sdl.h  linux_audio_period.h  linux_config.cpp  linux_config.h  linux_draw.cpp  linux_draw.h  linux_emu_thread.cpp  linux_emu_thread.h  linux_emu_time_pace.h  linux_emulation.h  linux_frame_pace.h  linux_ime.cpp  linux_ime.h  linux_input.cpp  linux_input.h  linux_monotonic.h  linux_paths.cpp  linux_paths.h  linux_reset_diag.cpp  linux_reset_diag.h  linux_sequencer.h  linux_sound.cpp  linux_sound.h  linux_startup_log.cpp  linux_startup_log.h  m88_miniaudio_devices.cpp  m88_miniaudio_devices.h  m88_port_version.h  m88_spsc_pcm.h  m88_stall_watchdog.cpp  m88_stall_watchdog.h  m88_wayland_idle_inhibit.cpp  m88_wayland_idle_inhibit.h  main.cpp  (+9 more)
src/linux_compat/: CritSect.h  FDC.h  FDU.h  Z80C.h  critsect.h  diag.cpp  diag.h  file.cpp  file.h  headers.h  loadmon.cpp  loadmon.h  path.cpp  path.h  pc88_matrix_vk.h  rom_log.cpp  rom_log.h  status.cpp  status.h  types.h  winkeys.h
src/linux_compat/romeo/: piccolo.h
src/pc88/: base.cpp  beep.cpp  beep.h  config.h  crtc.cpp  crtc.h  diskmgr.cpp  diskmgr.h  fdc.cpp  fdc.h  kanjirom.cpp  memory.cpp  memory.h  opnif.cpp  opnif.h  pc88.cpp  pc88.h  pc88_snapshot.cpp  screen.cpp  screen.h  sound.cpp  sound.h  subsys.cpp  subsys.h  tapemgr.cpp
src/qt/: about_dialog.cpp  about_dialog.h  config_dialog.cpp  config_dialog.h  confirm_dialog.cpp  confirm_dialog.h  disk_recent_files.cpp  disk_recent_files.h  emu_gl_view.cpp  emu_gl_view.h  emu_view.cpp  emu_view.h  emulator_controller.cpp  emulator_controller.h  fcitx_status.cpp  fcitx_status.h  m88_i18n.cpp  m88_i18n.h  m88_i18n.qrc  m88_icons.qrc  main_qt.cpp  main_window.cpp  main_window.h  multi_disk_editor_dialog.cpp  multi_disk_editor_dialog.h  qt_gl_config.cpp  qt_gl_config.h  qt_host_input.cpp  qt_host_input.h  qt_input.cpp  qt_input.h  qt_platform.cpp  qt_platform.h  qt_video_log.cpp  qt_video_log.h  screen_capture.cpp  screen_capture.h  shared_rgba_framebuffer.cpp  shared_rgba_framebuffer.h
src/tools/: z80test_main.cpp
src/win32/: WinKeyIF.cpp  WinKeyIF.h
src/win32/romeo/: piccolo.cpp
translations/: m88-qt_de.json  m88-qt_en.json  m88-qt_es.json  m88-qt_fr.json  m88-qt_ja.json  m88-qt_ko.json  m88-qt_zh_CN.json  m88-qt_zh_TW.json  sync_i18n.py
